--- a/dart/style.css
+++ b/dart/style.css
@@ -4,10 +4,13 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     font-family: sans-serif;
+    font-variant: small-caps;
+    font-weight: bold;
 }
 
 a {
     text-decoration: none;
+    color: #822b31;
 }
 
 hr {
@@ -18,10 +21,11 @@ h1 {
     font-size: 5em;
     font-family: sans-serif;
     margin: 0;
+    color: #822b31;
 }
 
 nav {
-    background-color: white;
+    //background-color: white;
     width: 100%;
     //    display: flex;
 }
@@ -30,10 +34,12 @@ nav ul {
     list-style: none;
     display: flex;
     justify-content: space-evenly;
+    margin: 0;
+    padding: 0;
 }
 
 a:visited {
-    color: blue;
+    color: #822b31;
 }
 
 nav ul li a {
@@ -69,4 +75,17 @@ nav ul li a {
     border: 1px solid #888;
     width: fit-content;
     z-index: 1;
+}
+
+.close {
+  color: #aaa;
+  float: left;
+  font-size: 28px;
+  font-weight: bold;
+}
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
